# RWA_GreenShare

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.rofl  Dockerfile.walrus  Move.toml  PRODUCTION-READY.md  README-DEPLOYMENT.md  README.md  docker-compose.yml  foundry.toml  jest.config.js  jest.integration.config.js  jest.setup.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
components/: ImTokenDeepLink.tsx  Layout.tsx  Markdown.tsx
contracts/: Bridge.sol  GudAdapter.sol  KYCRegistry.sol  MockGudEngine.sol  MockVerifier.sol  Verifier.sol  eKWH.sol
demo/: README.md  bridge-to-zircuit.ts  make-proof.sh  mint-on-sui.ts  seed-smartmeter.ts  trade-eKWH.ts
docs/: README.template.md  addresses.example.json  pitch-deck-outline.md  storage-hooks.md  threat-model.md
lib/: markdown.ts
lib/utils/: format.ts
pages/: bridge.tsx  dashboard.tsx  index.tsx  kyc.tsx  pay.tsx
script/: Deploy.s.sol
scripts/: check-deployment.sh  deploy-all.sh  deploy.ts  devnet-down.sh  devnet-up.sh  fix-todos.sh  mock-walrus-server.ts  test-storage.ts  upload.ts
sources/: certificate.move  sKWH.move  walrus_seal.move
src/: aggregator.rs  client.ts  config.rs  crypto.rs  crypto.ts  handlers.rs  index.ts  main.rs  merkle.rs  models.rs  seal.rs  seed.ts
test/: Bridge.t.sol  GudAdapter.t.sol  eKWH.t.sol
tests/: certificate_tests.move  contracts.test.ts  crypto.test.ts  integration_test.rs  rofl-enclave.test.ts  sKWH_tests.move  setup.ts  storage.test.ts  walrus_seal_tests.move
(+15 files in other folders)
